test_regress/t/t_assert_consec_rep_unsup.out
%Error-UNSUPPORTED: t/t_assert_consec_rep_unsup.v:13:45: Unsupported: multi-cycle sequence expression inside consecutive repetition (IEEE 1800-2023 16.9.2)
                                                       : ... note: In instance 't'
   13 |   assert property (@(posedge clk) (a ##1 b) [* 2] |-> a);
      |                                             ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
